- Updates to markdown export files following recent changes.

--- a/docs/Show-ADTInstallationWelcome.mdx
+++ b/docs/Show-ADTInstallationWelcome.mdx
@@ -348,7 +348,8 @@ Accept wildcard characters: False
 
 ### -NoMinimizeWindows
 
-Specify whether to minimize other windows when displaying prompt.
+Specifies whether to minimize other windows when displaying prompt.
+Default: $false.
 
 ```yaml
 Type: SwitchParameter
