- Use a UInt32 for `Get-ADTMsiExitCodeMessage`'s `-MsiExitCode` parameter.

--- a/docs/Get-ADTMsiExitCodeMessage.mdx
+++ b/docs/Get-ADTMsiExitCodeMessage.mdx
@@ -12,7 +12,7 @@ Get message for MSI exit code.
 ## SYNTAX
 
 ```powershell
-Get-ADTMsiExitCodeMessage [-MsiExitCode] <Int32> [<CommonParameters>]
+Get-ADTMsiExitCodeMessage [-MsiExitCode] <UInt32> [<CommonParameters>]
 ```
 
 ## DESCRIPTION
@@ -34,7 +34,7 @@ Get-ADTMsiExitCodeMessage -MsiExitCode 1618
 MSI exit code.
 
 ```yaml
-Type: Int32
+Type: UInt32
 Parameter Sets: (All)
 Aliases:
 
