--- a/docs/Start-ADTMsiProcess.mdx
+++ b/docs/Start-ADTMsiProcess.mdx
@@ -59,7 +59,7 @@ The MSI or MSP file is expected to reside in the "Files" subdirectory of the App
 ### EXAMPLE 1
 
 ```powershell
-Start-ADTMsiProcess -Action 'Install' -Path 'Adobe_FlashPlayer_11.2.202.233_x64_EN.msi'
+Start-ADTMsiProcess -Action 'Install' -FilePath 'Adobe_FlashPlayer_11.2.202.233_x64_EN.msi'
 ```
 
 Install an MSI.
@@ -67,7 +67,7 @@ Install an MSI.
 ### EXAMPLE 2
 
 ```powershell
-Start-ADTMsiProcess -Action 'Install' -Path 'Adobe_FlashPlayer_11.2.202.233_x64_EN.msi' -Transform 'Adobe_FlashPlayer_11.2.202.233_x64_EN_01.mst' -Parameters '/QN'
+Start-ADTMsiProcess -Action 'Install' -FilePath 'Adobe_FlashPlayer_11.2.202.233_x64_EN.msi' -Transforms 'Adobe_FlashPlayer_11.2.202.233_x64_EN_01.mst' -ArgumentList '/QN'
 ```
 
 Install an MSI, applying a transform and overriding the default MSI toolkit parameters.
@@ -75,7 +75,7 @@ Install an MSI, applying a transform and overriding the default MSI toolkit para
 ### EXAMPLE 3
 
 ```powershell
-$ExecuteMSIResult = Start-ADTMsiProcess -Action 'Install' -Path 'Adobe_FlashPlayer_11.2.202.233_x64_EN.msi' -PassThru
+$ExecuteMSIResult = Start-ADTMsiProcess -Action 'Install' -FilePath 'Adobe_FlashPlayer_11.2.202.233_x64_EN.msi' -PassThru
 ```
 
 Install an MSI and stores the result of the execution into a variable by using the -PassThru option.
@@ -83,7 +83,7 @@ Install an MSI and stores the result of the execution into a variable by using t
 ### EXAMPLE 4
 
 ```powershell
-Start-ADTMsiProcess -Action 'Uninstall' -Path '{26923b43-4d38-484f-9b9e-de460746276c}'
+Start-ADTMsiProcess -Action 'Uninstall' -ProductCode '{26923b43-4d38-484f-9b9e-de460746276c}'
 ```
 
 Uninstall an MSI using a product code.
@@ -91,7 +91,7 @@ Uninstall an MSI using a product code.
 ### EXAMPLE 5
 
 ```powershell
-Start-ADTMsiProcess -Action 'Patch' -Path 'Adobe_Reader_11.0.3_EN.msp'
+Start-ADTMsiProcess -Action 'Patch' -FilePath 'Adobe_Reader_11.0.3_EN.msp'
 ```
 
 Install an MSP.
