- Add `IsIntuneClientRebootPending` property to `Get-ADTPendingReboot` output.

--- a/docs/Get-ADTPendingReboot.mdx
+++ b/docs/Get-ADTPendingReboot.mdx
@@ -64,6 +64,7 @@ This cmdlet supports the common parameters: -Debug, -ErrorAction, -ErrorVariable
 ### - IsCBServicingRebootPending
 ### - IsWindowsUpdateRebootPending
 ### - IsSCCMClientRebootPending
+### - IsIntuneClientRebootPending
 ### - IsFileRenameRebootPending
 ### - PendingFileRenameOperations
 ### - ErrorMsg
