--- a/docs/Copy-ADTFileToUserProfiles.mdx
+++ b/docs/Copy-ADTFileToUserProfiles.mdx
@@ -28,7 +28,7 @@ It supports various options such as recursion, flattening files, and using Roboc
 ### EXAMPLE 1
 
 ```powershell
-Copy-ADTFileToUserProfiles -Path "$dirSupportFiles\config.txt" -Destination "AppData\Roaming\MyApp"
+Copy-ADTFileToUserProfiles -Path "$($adtSession.DirSupportFiles)\config.txt" -Destination "AppData\Roaming\MyApp"
 ```
 
 Copy a single file to C:\Users&lt;UserName&gt;\AppData\Roaming\MyApp for each user.
@@ -36,7 +36,7 @@ Copy a single file to C:\Users&lt;UserName&gt;\AppData\Roaming\MyApp for each us
 ### EXAMPLE 2
 
 ```powershell
-Copy-ADTFileToUserProfiles -Path "$dirSupportFiles\config.txt","$dirSupportFiles\config2.txt" -Destination "AppData\Roaming\MyApp"
+Copy-ADTFileToUserProfiles -Path "$($adtSession.DirSupportFiles)\config.txt","$($adtSession.DirSupportFiles)\config2.txt" -Destination "AppData\Roaming\MyApp"
 ```
 
 Copy two files to C:\Users&lt;UserName&gt;\AppData\Roaming\MyApp for each user.
@@ -44,7 +44,7 @@ Copy two files to C:\Users&lt;UserName&gt;\AppData\Roaming\MyApp for each user.
 ### EXAMPLE 3
 
 ```powershell
-Copy-ADTFileToUserProfiles -Path "$dirFiles\MyDocs" Destination "MyApp" -BasePath "Documents" -Recurse
+Copy-ADTFileToUserProfiles -Path "$($adtSession.DirFiles)\MyDocs" Destination "MyApp" -BasePath "Documents" -Recurse
 ```
 
 Copy an entire folder recursively to a new MyApp folder under each user's Documents folder.
@@ -52,7 +52,7 @@ Copy an entire folder recursively to a new MyApp folder under each user's Docume
 ### EXAMPLE 4
 
 ```powershell
-Copy-ADTFileToUserProfiles -Path "$dirFiles\.appConfigFolder" -Recurse
+Copy-ADTFileToUserProfiles -Path "$($adtSession.DirFiles)\.appConfigFolder" -Recurse
 ```
 
 Copy an entire folder to C:\Users&lt;UserName&gt; for each user.
