--- a/docs/Remove-ADTContentFromCache.mdx
+++ b/docs/Remove-ADTContentFromCache.mdx
@@ -7,7 +7,7 @@ hide_table_of_contents: false
 
 ## SYNOPSIS
 
-Removes the toolkit content from the cache folder on the local machine and reverts the $dirFiles and $supportFiles directory.
+Removes the toolkit content from the cache folder on the local machine and reverts the $adtSession.DirFiles and $adtSession.SupportFiles directory.
 
 ## SYNTAX
 
@@ -18,7 +18,7 @@ Remove-ADTContentFromCache [[-Path] <String>] [<CommonParameters>]
 ## DESCRIPTION
 
 This function removes the toolkit content from the cache folder on the local machine.
-It also reverts the $dirFiles and $supportFiles directory to their original state.
+It also reverts the $adtSession.DirFiles and $adtSession.SupportFiles directory to their original state.
 If the specified cache folder does not exist, it logs a message and exits.
 
 ## EXAMPLES
@@ -26,7 +26,7 @@ If the specified cache folder does not exist, it logs a message and exits.
 ### EXAMPLE 1
 
 ```powershell
-Remove-ADTContentFromCache -Path 'C:\Windows\Temp\PSAppDeployToolkit'
+Remove-ADTContentFromCache -Path "$envWinDir\Temp\PSAppDeployToolkit"
 ```
 
 Removes the toolkit content from the specified cache folder.
