--- a/docs/Start-ADTProcess.mdx
+++ b/docs/Start-ADTProcess.mdx
@@ -33,11 +33,15 @@ Provides various options for handling the return codes (see Parameters).
 Start-ADTProcess -FilePath 'setup.exe' -ArgumentList '/S' -IgnoreExitCodes 1,2
 ```
 
+Launch InstallShield "setup.exe" from the ".\Files" sub-directory.
+
 ### EXAMPLE 2
 
 ```powershell
-Start-ADTProcess -FilePath "$dirFiles\Bin\setup.exe" -ArgumentList '/S' -WindowStyle 'Hidden'
+Start-ADTProcess -FilePath "$($adtSession.DirFiles)\Bin\setup.exe" -ArgumentList '/S' -WindowStyle 'Hidden'
 ```
+
+Launch InstallShield "setup.exe" from the ".\Files\Bin" sub-directory.
 
 ### EXAMPLE 3
 
@@ -45,12 +49,12 @@ Start-ADTProcess -FilePath "$dirFiles\Bin\setup.exe" -ArgumentList '/S' -WindowS
 Start-ADTProcess -FilePath 'uninstall_flash_player_64bit.exe' -ArgumentList '/uninstall' -WindowStyle 'Hidden'
 ```
 
-If the file is in the "Files" directory of the App Deploy Toolkit, only the file name needs to be specified.
+If the file is in the "Files" directory of the AppDeployToolkit, only the file name needs to be specified.
 
 ### EXAMPLE 4
 
 ```powershell
-Start-ADTProcess -FilePath 'setup.exe' -ArgumentList "-s -f2`"$((Get-ADTConfig).Toolkit.LogPath)\$installName.log`""
+Start-ADTProcess -FilePath 'setup.exe' -ArgumentList "-s -f2`"$((Get-ADTConfig).Toolkit.LogPath)\$($adtSession.InstallName).log`""
 ```
 
 Launch InstallShield "setup.exe" from the ".\Files" sub-directory and force log files to the logging folder.
@@ -58,7 +62,7 @@ Launch InstallShield "setup.exe" from the ".\Files" sub-directory and force log 
 ### EXAMPLE 5
 
 ```powershell
-Start-ADTProcess -FilePath 'setup.exe' -ArgumentList "/s /v`"ALLUSERS=1 /qn /L* `"$((Get-ADTConfig).Toolkit.LogPath)\$installName.log`"`""
+Start-ADTProcess -FilePath 'setup.exe' -ArgumentList "/s /v`"ALLUSERS=1 /qn /L* `"$((Get-ADTConfig).Toolkit.LogPath)\$($adtSession.InstallName).log`"`""
 ```
 
 Launch InstallShield "setup.exe" with embedded MSI and force log files to the logging folder.
@@ -71,7 +75,7 @@ Path to the file to be executed.
 If the file is located directly in the "Files" directory of the App Deploy Toolkit, only the file name needs to be specified.
 
 Otherwise, the full path of the file must be specified.
-If the files is in a subdirectory of "Files", use the "$dirFiles" variable as shown in the example.
+If the files is in a subdirectory of "Files", use the "$($adtSession.DirFiles)" variable as shown in the example.
 
 ```yaml
 Type: String
