--- a/docs/Set-ADTActiveSetup.mdx
+++ b/docs/Set-ADTActiveSetup.mdx
@@ -34,7 +34,7 @@ A registry key is created in the HKLM registry hive which gets replicated to the
 If the "Version" value of the Active Setup entry in HKLM is higher than the version value in HKCU, the file referenced in "StubPath" is executed.
 
 This Function:
-    - Creates the registry entries in HKLM:SOFTWARE\Microsoft\Active Setup\Installed Components\$installName.
+    - Creates the registry entries in "HKLM:\SOFTWARE\Microsoft\Active Setup\Installed Components\$($adtSession.InstallName)".
     - Creates StubPath value depending on the file extension of the $StubExePath parameter.
     - Handles Version value with YYYYMMDDHHMMSS granularity to permit re-installs on the same day and still trigger Active Setup after Version increase.
     - Copies/overwrites the StubPath file to $StubExePath destination path if file exists in 'Files' subdirectory of script directory.
