- Amend examples in comment-based help for `New-ADTTemplate`.

--- a/docs/New-ADTTemplate.mdx
+++ b/docs/New-ADTTemplate.mdx
@@ -26,7 +26,7 @@ You also have the option of creating a template for v3 compatibility mode.
 ### EXAMPLE 1
 
 ```powershell
-New-ADTTemplate -Path 'C:\Temp' -Name 'PSAppDeployToolkitv4'
+New-ADTTemplate -Destination 'C:\Temp' -Name 'PSAppDeployToolkitv4'
 ```
 
 Creates a new v4 template named PSAppDeployToolkitv4 under C:\Temp.
@@ -34,7 +34,7 @@ Creates a new v4 template named PSAppDeployToolkitv4 under C:\Temp.
 ### EXAMPLE 2
 
 ```powershell
-New-ADTTemplate -Path 'C:\Temp' -Name 'PSAppDeployToolkitv3' -Version 3
+New-ADTTemplate -Destination 'C:\Temp' -Name 'PSAppDeployToolkitv3' -Version 3
 ```
 
 Creates a new v3 compatibility mode template named PSAppDeployToolkitv3 under C:\Temp.
