--- a/docs/Get-ADTEnvironmentTable.mdx
+++ b/docs/Get-ADTEnvironmentTable.mdx
@@ -1,6 +1,6 @@
 ---
-id: Get-ADTEnvironment
-title: Get-ADTEnvironment
+id: Get-ADTEnvironmentTable
+title: Get-ADTEnvironmentTable
 hide_title: false
 hide_table_of_contents: false
 ---
@@ -8,28 +8,25 @@ hide_table_of_contents: false
 ## SYNOPSIS
 
 Retrieves the environment data for the ADT module.
-This function has been replaced by Get-ADTEnvironmentTable and will be removed from a future release.
 
 ## SYNTAX
 
 ```powershell
-Get-ADTEnvironment [<CommonParameters>]
+Get-ADTEnvironmentTable [<CommonParameters>]
 ```
 
 ## DESCRIPTION
 
-The Get-ADTEnvironment function retrieves the environment data for the ADT module.
+The Get-ADTEnvironmentTable function retrieves the environment data for the ADT module.
 This function ensures that the ADT module has been initialized before attempting to retrieve the environment data.
 If the module is not initialized, it throws an error.
-
-This function has been replaced by Get-ADTEnvironmentTable and will be removed from a future release.
 
 ## EXAMPLES
 
 ### EXAMPLE 1
 
 ```powershell
-$environment = Get-ADTEnvironment
+$environment = Get-ADTEnvironmentTable
 ```
 
 This example retrieves the environment data for the ADT module and stores it in the $environment variable.
