- Fix bad comment-based help within `Copy-ADTFile`.

--- a/docs/Copy-ADTFile.mdx
+++ b/docs/Copy-ADTFile.mdx
@@ -42,10 +42,18 @@ Recursively copies the folder 'Folder' from 'C:\Path' to 'D:\Destination'.
 ### EXAMPLE 3
 
 ```powershell
-Copy-ADTFile -Path 'C:\Path\file.txt' -Destination 'D:\Destination\file.txt' -Force
+Copy-ADTFile -Path 'C:\Path\file.txt' -Destination 'D:\Destination\file.txt'
 ```
 
 Copies the file 'file.txt' from 'C:\Path' to 'D:\Destination', overwriting the destination file if it exists.
+
+### EXAMPLE 4
+
+```powershell
+Copy-ADTFile -Path "$($adtSession.DirFiles)\*" -Destination C:\some\random\file\path
+```
+
+Copies all files within the active session's Files folder to 'C:\some\random\file\path', overwriting the destination file if it exists.
 
 ## PARAMETERS
 
