- Remove all references to "XML" within comment-based help.

--- a/docs/Block-ADTAppExecution.mdx
+++ b/docs/Block-ADTAppExecution.mdx
@@ -31,7 +31,7 @@ Creates a scheduled task to restore the IFEO registry key values in case the scr
 Modifies the "Image File Execution Options" registry key for the specified process(s) to call this script with the parameter -ShowBlockedAppDialog.
 5.
 When the script is called with those parameters, it will display a custom message to the user to indicate that execution of the application has been blocked while the installation is in progress.
-    The text of this message can be customized in the XML configuration file.
+    The text of this message can be customized in the strings.psd1 file.
 
 ## EXAMPLES
 
