--- a/docs/Show-ADTInstallationWelcome.mdx
+++ b/docs/Show-ADTInstallationWelcome.mdx
@@ -397,8 +397,8 @@ Accept wildcard characters: False
 
 ### -CustomText
 
-Specify whether to display a custom message specified in the XML file.
-Custom message must be populated for each language section in the XML.
+Specify whether to display a custom message specified in the string.psd1 file.
+Custom message must be populated for each language section in the string.psd1 file.
 
 ```yaml
 Type: SwitchParameter
@@ -483,7 +483,7 @@ An active ADT session is NOT required to use this function.
 The process descriptions are retrieved via Get-Process, with a fall back on the process name if no description is available.
 Alternatively, you can specify the description yourself with a '=' symbol - see examples.
 
-The dialog box will timeout after the timeout specified in the XML configuration file (default 1 hour and 55 minutes) to prevent SCCM installations from timing out and returning a failure code to SCCM.
+The dialog box will timeout after the timeout specified in the config.psd1 file (default 55 minutes) to prevent Intune/SCCM installations from timing out and returning a failure code.
 When the dialog times out, the script will exit and return a 1618 code (SCCM fast retry code).
 
 Tags: psadt
