--- a/docs/Start-ADTMsiProcess.mdx
+++ b/docs/Start-ADTMsiProcess.mdx
@@ -49,7 +49,7 @@ The operations include installation, uninstallation, patching, repair, and setti
 
 If the -Action parameter is set to "Install" and the MSI is already installed, the function will terminate without performing any actions.
 
-The function automatically sets default switches for msiexec based on preferences defined in the XML configuration file.
+The function automatically sets default switches for msiexec based on preferences defined in the config.psd1 file.
 Additionally, it generates a log file name and creates a verbose log for all msiexec operations, ensuring detailed tracking.
 
 The MSI or MSP file is expected to reside in the "Files" subdirectory of the App Deploy Toolkit, with transform files expected to be in the same directory as the MSI file.
@@ -182,7 +182,7 @@ Accept wildcard characters: False
 
 ### -ArgumentList
 
-Overrides the default parameters specified in the XML configuration file.
+Overrides the default parameters specified in the config.psd1 file.
 The install default is: "REBOOT=ReallySuppress /QB!".
 The uninstall default is: "REBOOT=ReallySuppress /QN".
 
@@ -200,7 +200,7 @@ Accept wildcard characters: False
 
 ### -AdditionalArgumentList
 
-Adds additional parameters to the default set specified in the XML configuration file.
+Adds additional parameters to the default set specified in the config.psd1 file.
 The install default is: "REBOOT=ReallySuppress /QB!".
 The uninstall default is: "REBOOT=ReallySuppress /QN".
 
@@ -251,7 +251,7 @@ Accept wildcard characters: False
 
 ### -LoggingOptions
 
-Overrides the default logging options specified in the XML configuration file.
+Overrides the default logging options specified in the config.psd1 file.
 
 ```yaml
 Type: String
