--- a/docs/Uninstall-ADTApplication.mdx
+++ b/docs/Uninstall-ADTApplication.mdx
@@ -182,7 +182,7 @@ Accept wildcard characters: False
 
 ### -ArgumentList
 
-Overrides the default MSI parameters specified in the configuration file, or the parameters found in QuietUninstallString/UninstallString for EXE applications.
+Overrides the default MSI parameters specified in the config.psd1 file, or the parameters found in QuietUninstallString/UninstallString for EXE applications.
 
 ```yaml
 Type: String
@@ -198,7 +198,7 @@ Accept wildcard characters: False
 
 ### -AdditionalArgumentList
 
-Adds to the default parameters specified in the configuration file, or the parameters found in QuietUninstallString/UninstallString for EXE applications.
+Adds to the default parameters specified in the config.psd1 file, or the parameters found in QuietUninstallString/UninstallString for EXE applications.
 
 ```yaml
 Type: String
@@ -230,7 +230,7 @@ Accept wildcard characters: False
 
 ### -LoggingOptions
 
-Overrides the default MSI logging options specified in the configuration file.
+Overrides the default MSI logging options specified in the config.psd1 file.
 Default options are: "/L*v".
 
 ```yaml
