--- a/docs/Open-ADTSession.mdx
+++ b/docs/Open-ADTSession.mdx
@@ -21,7 +21,7 @@ Open-ADTSession [-SessionState] <SessionState> [[-DeploymentType] <String>] [[-D
  [[-DeployAppScriptParameters] <System.Collections.Generic.Dictionary`2[System.String,System.Object]>]
  [[-AppSuccessExitCodes] <Int32[]>] [[-AppRebootExitCodes] <Int32[]>] [[-ScriptDirectory] <String>]
  [[-DirFiles] <String>] [[-DirSupportFiles] <String>] [[-DefaultMsiFile] <String>] [[-DefaultMstFile] <String>]
- [[-DefaultMspFiles] <String[]>] [-ForceWimDetection] [-PassThru]
+ [[-DefaultMspFiles] <String[]>] [[-LogName] <String>] [-ForceWimDetection] [-PassThru]
  [[-UnboundArguments] <System.Collections.Generic.List`1[System.Object]>] [<CommonParameters>]
 ```
 
@@ -507,6 +507,22 @@ Accept pipeline input: False
 Accept wildcard characters: False
 ```
 
+### -LogName
+
+Specifies an override for the default-generated log file name.
+
+```yaml
+Type: String
+Parameter Sets: (All)
+Aliases:
+
+Required: False
+Position: 27
+Default value: None
+Accept pipeline input: False
+Accept wildcard characters: False
+```
+
 ### -ForceWimDetection
 
 Specifies that WIM files should be detected and mounted during session initialization, irrespective of whether any App values are provided.
@@ -549,7 +565,7 @@ Parameter Sets: (All)
 Aliases:
 
 Required: False
-Position: 27
+Position: 28
 Default value: None
 Accept pipeline input: False
 Accept wildcard characters: False
